--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -103,5 +103,5 @@
 }
 
 @mixin outline() {
-  outline: dotted 0.15rem $color-mediumblue;
+  outline: dotted 0.15rem $color-mediumblue !important;
 }
