--- a/styles/components/_genericCard.scss
+++ b/styles/components/_genericCard.scss
@@ -1,80 +1,111 @@
 @import "../settings/_mixins";
 
-.genericCard {
-  height: 100%;
-  border-radius: 1rem;
-  @include shadow();
-  display: flex;
-  flex-direction: column;
-  .image {
-    max-height: 22.5rem;
-  }
-  @include desktop() {
-    .image {
-      max-height: initial;
+.genericCardWrapper {
+  @supports #{'\selector(*:focus-visible)'} {
+    &:not(:focus-visible) {
+      .genericCard {
+        outline: none !important;
+      }
     }
-  }
-
-  &__image {
-    background: $color-gray;
-    height: toRem(170);
-    overflow: hidden;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-    & > span {
-      &:only-child {
-        height: 100% !important;
+    &:focus-visible {
+      outline: none !important;
+      .genericCard {
+        @include outline();
       }
     }
   }
-  &__textContent {
+  @supports #{'\not selector(*:focus-visible)'} {
+    &:focus {
+      outline: none !important;
+      .genericCard {
+        @include outline();
+      }
+    }
+  }
+  @media (any-pointer: coarse) {
+    &:hover {
+      outline: none !important;
+      .genericCard {
+        @include outline();
+      }
+    }
+  }
+  .genericCard {
+    height: 100%;
+    border-radius: 1rem;
+    @include shadow();
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-
-    &--date {
-      text-transform: uppercase;
-      color: $color-black;
-      font-size: 1rem;
-      padding: 1rem 1.5rem 0 1.5rem;
+    .image {
+      max-height: 22.5rem;
     }
-
-    &--category {
-      text-transform: capitalize;
-      color: $color-black;
-      font-size: 1rem;
-      font-weight: 600;
-      padding: 1rem 1.5rem 0 1.5rem;
+    @include desktop() {
+      .image {
+        max-height: initial;
+      }
     }
-
-    &--title {
-      padding: 1rem 1.5rem 0 1.5rem;
+  
+    &__image {
+      background: $color-gray;
+      height: toRem(170);
+      overflow: hidden;
+      border-top-left-radius: 1rem;
+      border-top-right-radius: 1rem;
+      & > span {
+        &:only-child {
+          height: 100% !important;
+        }
+      }
     }
-
-    &--description {
-      padding: 1rem 1.5rem 0 1.5rem;
-    }
-
-    &--link {
-      padding: 0.5rem 1.5rem 1.3rem 1.5rem;
-      display: block;
-      font-weight: 600;
-      font-size: 1rem;
-      color: $color-darkblue;
-      span {
-        position: relative;
-        display: flex;
-        align-items: center;
-        &::after {
-          content: "";
-          display: block;
-          padding: 0.15rem;
-          border-right: solid;
-          border-top: solid;
-          margin-left: 0.2rem;
-          border-width: 0.15rem;
-          border-color: $color-darkblue;
-          transform: rotate(45deg);
+    &__textContent {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+  
+      &--date {
+        text-transform: uppercase;
+        color: $color-black;
+        font-size: 1rem;
+        padding: 1rem 1.5rem 0 1.5rem;
+      }
+  
+      &--category {
+        text-transform: capitalize;
+        color: $color-black;
+        font-size: 1rem;
+        font-weight: 600;
+        padding: 1rem 1.5rem 0 1.5rem;
+      }
+  
+      &--title {
+        padding: 1rem 1.5rem 0 1.5rem;
+      }
+  
+      &--description {
+        padding: 1rem 1.5rem 0 1.5rem;
+      }
+  
+      &--link {
+        padding: 0.5rem 1.5rem 1.3rem 1.5rem;
+        display: block;
+        font-weight: 600;
+        font-size: 1rem;
+        color: $color-darkblue;
+        span {
+          position: relative;
+          display: flex;
+          align-items: center;
+          &::after {
+            content: "";
+            display: block;
+            padding: 0.15rem;
+            border-right: solid;
+            border-top: solid;
+            margin-left: 0.2rem;
+            border-width: 0.15rem;
+            border-color: $color-darkblue;
+            transform: rotate(45deg);
+          }
         }
       }
     }
