--- a/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
@@ -33,44 +33,10 @@
       z-index: 2;
       background-color: white;
       select, input {
-        @supports #{'\selector(*:focus-visible)'} {
-          &:not(:focus-visible) {
-            outline: none !important;
-          }
-          &:focus-visible {
-            @include outline();
-          }
-        }
-        @supports #{'\not selector(*:focus-visible)'} {
-          &:focus {
-            @include outline();  
-          }
-        }
-        @media (any-pointer: coarse) {
-          &:hover {
-            @include outline();
-          }
-        }
+        @include focus-visible-touch-outlines();
       }
       .mobileCategoryToggle {
-        @supports #{'\selector(*:focus-visible)'} {
-          &:not(:focus-visible) {
-            outline: none !important;
-          }
-          &:focus-visible {
-            @include outline();
-          }
-        }
-        @supports #{'\not selector(*:focus-visible)'} {
-          &:focus {
-            @include outline();  
-          }
-        }
-        @media (any-pointer: coarse) {
-          &:hover {
-            @include outline();
-          }
-        }
+        @include focus-visible-touch-outlines();
         cursor: pointer;
         .chevron {
           height: 1rem;
