added nagative margin class

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -369,6 +369,9 @@
 .mt-6 {
   margin-top: $size-6 !important;
 }
+.mt--5 {
+  margin-top: -$size-6 !important;
+}
 
 .mb-0 {
   margin-bottom: 0 !important;
