--- a/components/agility-pageModules/accordion/accordion.module.scss
+++ b/components/agility-pageModules/accordion/accordion.module.scss
@@ -6,20 +6,19 @@
     flex-direction: column;
 }
 .accordion {
-    gap: .25rem;
     .accordionItem {
         .itemToggle {
             display: flex;
             align-items: center;
             gap: 1rem;
-            padding: .75rem 1.5rem;
+            padding: .75rem 0;
             cursor: pointer;
             user-select: none;
-            background-color: $color-navy;
             .chevron {
                 width: .75rem;
                 height: .75rem;
-                border-color: $color-white;
+                margin-left: .2rem;
+                border-color: $color-darkblue;
                 border-width: 0px 2px 2px 0px;
                 border-style: solid;
                 transform: translateY(-.2rem) rotate(45deg);
@@ -32,26 +31,21 @@
         }
         .itemContentWrapper {
             height: 0;
-            visibility: hidden;
-            transition: transform 350ms;
             transform: scaleY(0);
-            background-color: $color-darkblue;
-            color: $color-white;
+            color: $color-black;
             > div {
-                padding: 2rem;
+                a {
+                    color: $color-darkblue;
+                }
             }
         }
-        .itemToggle, .itemContentWrapper {
-            border-radius: .5rem;
-        }
         &.expanded {
-            gap: .25rem;
             .chevron {
                 transform: translateY(.2rem) rotate(225deg);
             }
             .itemContentWrapper, ~.itemContentWrapper {
                 height: auto;
-                visibility: visible;
+                transition: transform 350ms;
                 transform-origin: top;
                 transform: scaleY(1);
             }
