--- a/components/agility-pageModules/accordion/accordion.module.scss
+++ b/components/agility-pageModules/accordion/accordion.module.scss
@@ -19,7 +19,7 @@
                 height: .75rem;
                 margin-left: .2rem;
                 border-color: $color-darkblue;
-                border-width: 0px 4px 4px 0px;
+                border-width: 0 .25rem .25rem 0;
                 border-style: solid;
                 transform: translateY(-.2rem) rotate(45deg);
             }
