--- a/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
@@ -43,7 +43,7 @@
           width: 1rem;
           margin-right: 1rem;
           border-color: $color-black;
-          border-width: 0px 2px 2px 0px;
+          border-width: 0 .125rem .125rem 0;
           border-style: solid;
           transform: translate(.5rem, -.25rem) rotate(45deg);
           &.flipped {
