updated text grid with media style

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -112,9 +112,9 @@
   }
 }
 .imageFullWidth {
-  .textItem {
+  &.textItem {
     overflow: hidden;
-    padding: 0 0 1.5rem 0;
+    padding: 0 0 1.5rem 0 !important;
     .textItemMedia {
       max-width: 100%;
     }
