--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -230,6 +230,11 @@
     }
   }
 }
+.align-left {
+  .grid-columns .grid-column {
+    justify-content: flex-start;
+  }
+}
 
 /*
   <<<<<<<<<<<<<<<<GENERIC HELPER CLASSES>>>>>>>>>>>>>>>>>
