added a logo left and heading right style for text grid with media

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -123,6 +123,14 @@
     }
   }
 }
+.logoLeftHeaderRight {
+  &.textItem {
+    .textItemMedia {
+      max-width: 4rem;
+      margin-right: 1.5rem;
+    }
+  }
+}
 
 @include tablet {
   .is-2-larger-gap {
