--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -133,7 +133,8 @@
     .textItemMedia {
       max-width: 100%;
     }
-    .content {
+    .content,
+    span.rightArrow {
       padding: 0 1.5rem;
     }
   }
