updated text grid with media style for logoLeftHeaderRight option

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -112,7 +112,9 @@
   }
   .logoLeftHeaderRight {
     align-items: center;
-
+    .textItemHeading {
+      width: 100%;
+    }
     .textItemMedia {
       max-width: 3rem !important;
       min-width: 25%;
