added algin item center style

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -240,6 +240,11 @@
     }
   }
 }
+.align-item-center {
+  .grid-columns {
+    align-items: center;
+  }
+}
 
 /*
   <<<<<<<<<<<<<<<<GENERIC HELPER CLASSES>>>>>>>>>>>>>>>>>
