--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -168,7 +168,7 @@
   display: flex;
   width: 100%;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
 
   @include tablet() {
     // When we want to make the items into two differnt rows
