updated text grid with media mobile style and vertical alignment

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -113,12 +113,19 @@
 }
 .logoLeftHeaderRight {
   .content {
+    line-height: 1.3rem;
     .grid {
-      gap: 1rem;
+      gap: 0;
+      display: block;
+      @include desktop() {
+        display: flex;
+        gap: 1rem;
+      }
     }
   }
   align-items: center;
   &.textItemFlex {
+    display: flex;
     @include desktop() {
       height: 100%;
       padding: 1.5rem 0 !important;
