--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -109,7 +109,8 @@
   align-items: flex-end !important;
 }
 
-.align-items-center {
+.align-items-center,
+.align-items-center .grid-columns {
   align-items: center !important;
 }
 .align-items-unset {
