--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -119,7 +119,7 @@
       display: block;
       @include desktop() {
         display: flex;
-        gap: 1rem;
+        gap: 0.5rem;
       }
     }
   }
@@ -170,7 +170,8 @@
   .is-3 {
     flex: 0 0 calc(33.3333% - 0.5rem);
   }
-  .is-4 {
+  .is-4,
+  .is-4.small-gap {
     flex: 0 0 calc(25% - 0.5rem);
   }
   .is-5 {
