--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -36,6 +36,7 @@
       span.rightArrow {
         font-weight: 600;
         color: $color-darkblue;
+        margin-top: 0.5rem;
         margin-bottom: 1rem;
         &:after {
           content: ">";
@@ -184,10 +185,18 @@
     flex: 0 0 calc(50% - 2rem);
   }
   .is-3-larger-gap {
+    display: flex;
     flex: 0 0 calc(33.3333% - 2rem);
+    & > * {
+      flex-basis: 100% !important;
+    }
   }
   .is-4-larger-gap {
+    display: flex;
     flex: 0 0 calc(25% - 2rem);
+    & > * {
+      flex-basis: 100% !important;
+    }
   }
   .is-5-larger-gap {
     flex: 0 0 calc(20% - 2rem);
