fixed mobile styling issues for text grid with media card

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -151,6 +151,11 @@
   }
 }
 .imageFullWidth {
+  .textItem {
+    flex: auto;
+  }
+}
+.imageFullWidth {
   &.textItem {
     overflow: hidden;
     padding: 0 0 1.5rem 0 !important;
