--- a/components/agility-pageModules/blankCards/blankCards.module.scss
+++ b/components/agility-pageModules/blankCards/blankCards.module.scss
@@ -3,7 +3,7 @@
 
 .cardGrid {
     display: flex;
-    $card-gap: 1rem;
+    $card-gap: 2rem;
     gap: $card-gap;
     flex-wrap: wrap;
     justify-content: center;
@@ -57,33 +57,62 @@
     }
     .cardWrapper {
         height: 100%;
-        flex-basis: 100%;
-        @include desktop() {
-            flex-grow: 0;
-            flex-shrink: 0;
-        }
         .card {
             height: 100%;
             display: flex;
             flex-direction: column;
             border-radius: 1rem;
             @include shadow();
+            .imageWrapper {
+                max-height: 22.5rem;
+                overflow: hidden;
+                border-top-left-radius: 1rem;
+                border-top-right-radius: 1rem;
+                $image-wrapper-height: 10.625rem;
+                > span {
+                    height: 100% !important;
+                }
+                @include desktop() {
+                    max-height: initial;
+                }
+            }
+            .imageWrapper, .titleWithIcon {
+                margin-bottom: .75rem;
+                @include desktop() {
+                    &.height1 {
+                        height: 22.5rem;
+                    }
+                    &.height2 {
+                        height: 15rem;
+                    }
+                    &.height3 {
+                        height: 12.5rem;
+                    }
+                    &.height4 {
+                        height: 10.625rem;
+                    }
+                }
+            }
             .textContent {
-                padding: 2rem;
-                .titleArea {
+                display: flex;
+                flex-direction: column;
+                padding: 0 1.5rem 1.5rem 1.5rem;
+                &:not(.imageCardTextContent) {
+                    height: 100%;
+                }
+                .title {
+                    font-size: 1rem;
+                    font-weight: 600;
+                    justify-self: center;
+                    &:not(:only-child) {
+                        flex-basis: 60%;
+                    }
+                }
+                .titleWithIcon {
                     display: flex;
                     align-items: center;
-                    justify-content: center;
                     width: 100%;
                     gap: .75rem;
-                    .title {
-                        text-align: center;
-                        font-size: 1.75rem;
-                        justify-self: center;
-                        &:not(:only-child) {
-                            flex-basis: 60%;
-                        }
-                    }
                     .iconWrapper {
                         flex-grow: 1;
                         flex-basis: 40%;
@@ -91,6 +120,29 @@
                             height: 100% !important;
                             width: 100% !important;
                         }
+                    }
+                }
+            }
+            .linkText {
+                margin-top: auto;
+                font-size: 1rem;
+                font-weight: 600;
+                color: $color-darkblue;
+                span {
+                    position: relative;
+                    display: flex;
+                    align-items: center;
+                    display: flex;
+                    &::after {
+                        content: "";
+                        display: block;
+                        padding: 0.15rem;
+                        border-right: solid;
+                        border-top: solid;
+                        margin-left: 0.2rem;
+                        border-width: 0.15rem;
+                        border-color: $color-darkblue;
+                        transform: rotate(45deg);
                     }
                 }
             }
