--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -513,6 +513,18 @@
 .pt-2 {
   padding-top: $size-2 !important;
 }
+.pt-3 {
+  padding-top: $size-3 !important;
+}
+.pt-4 {
+  padding-top: $size-4 !important;
+}
+.pt-5 {
+  padding-top: $size-5 !important;
+}
+.pt-6 {
+  padding-top: $size-6 !important;
+}
 .pb-0 {
   padding-bottom: 0 !important;
 }
