--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -144,6 +144,7 @@
     div {
       &:only-child {
         width: 100%;
+        display: flex;
         img {
           object-fit: contain;
         }
