Change text grid with media item min-width

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -33,6 +33,7 @@
         gap: $larger-gap;
       }
       .gridItem {
+        min-width: 0;
         flex-grow: 0;
         flex-shrink: 0;
         flex-basis: 100%;
