--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -34,6 +34,7 @@
       }
       .gridItem {
         min-width: 0;
+        min-height: 100%;
         flex-grow: 0;
         flex-shrink: 0;
         flex-basis: 100%;
