--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -268,6 +268,12 @@
 .border-radius-1 {
   border-radius: 1rem;
 }
+.border-radius-1-5 {
+  border-radius: 1.5rem;
+}
+.border-radius-2 {
+  border-radius: 2rem;
+}
 
 .align-center {
   text-align: center;
