updated border radius class for image

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -265,13 +265,16 @@
   border-radius: 0.25rem;
 }
 
-.border-radius-1 {
+.border-radius-1,
+.border-radius-1 > span > img {
   border-radius: 1rem;
 }
-.border-radius-1-5 {
+.border-radius-1-5,
+.border-radius-1-5 > span > img {
   border-radius: 1.5rem;
 }
-.border-radius-2 {
+.border-radius-2,
+.border-radius-2 > span > img {
   border-radius: 2rem;
 }
 
