updated textGridWithMedia styling issues

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -163,7 +163,7 @@
 }
 .logoLeftHeaderRight {
   .mt-4 {
-    margin-top: 0;
+    margin-top: 0 !important;
   }
   .content {
     line-height: 1.3rem;
