--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -326,7 +326,9 @@ blog posts or anywhere where html is rendered */
       max-width: 50vw;
       height: unset;
       &.fixed-width {
-        width: auto;
+        @include touch() {
+          width: auto;
+        }
       }
       @include touch() {
         max-width: 70vw;
