--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -216,6 +216,10 @@
     padding: 0 0 1.5rem 0 !important;
     .textItemMedia {
       max-width: 100%;
+      height: 11rem;
+      & > span:only-child img {
+        object-fit: cover;
+      }
     }
     .content,
     span.rightArrow {
