updated image styles for textGridWithMedia

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -219,6 +219,7 @@
       height: 12.5rem;
       & > span:only-child img {
         object-fit: cover;
+        min-height: 100% !important;
       }
     }
     .content,
