archivesPageContent changes for resources page

--- a/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
@@ -1,6 +1,54 @@
 @import "../../../styles/settings/mixins";
 @import "../../../styles/settings/colors";
 
+.highlightedResource {
+  position: relative;
+  margin-bottom: 1rem;
+  .highlightedResourceBackgroundImage {
+    & > * {
+      display: block !important;
+      height: 100% !important;
+    }
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    img {
+      object-fit: cover;
+      max-height: unset !important;
+      min-height: unset !important;
+      height: 100% !important;
+    }
+  }
+  .backgroundFilter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparentize($color: #000, $amount: 0.35);
+  }
+  .highlightedResourceContent {
+    position: relative;
+    color: $color-white;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    p {
+      margin: 1rem 0 2rem 0;
+    }
+    a {
+      padding: 0.75rem 3.5rem;
+    }
+  }
+  // resets for large screen sizes
+  @include desktop() {
+    min-height: 23.4375rem;
+  }
+}
 .archivesPageContent {
   .navigationMenu {
     display: grid;
