--- a/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
@@ -87,30 +87,41 @@
         @include focus-visible-touch-outlines();
       }
       .mobileCategoryToggle {
+        all: unset;
         @include focus-visible-touch-outlines();
         cursor: pointer;
-        .chevron {
-          height: 1rem;
-          width: 1rem;
-          margin-right: 1rem;
-          border-color: $color-black;
-          border-width: 0 .125rem .125rem 0;
-          border-style: solid;
-          transform: translate(.5rem, -.25rem) rotate(45deg);
-          &.flipped {
-            transform: translate(.5rem, .25rem) rotate(225deg);
+        > div {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          .chevron {
+            height: 1rem;
+            width: 1rem;
+            margin-right: 1rem;
+            border-color: $color-black;
+            border-width: 0 .125rem .125rem 0;
+            border-style: solid;
+            transform: translate(.5rem, -.25rem) rotate(45deg);
+            &.flipped {
+              transform: translate(.5rem, .25rem) rotate(225deg);
+            }
+          }
+          @include desktop() {
+            pointer-events: none;
+            .chevron {
+              display: none;
+            }
           }
         }
         legend {
           padding: 0;
           margin: 0;
         }
-        @include desktop() {
-          pointer-events: none;
-          .chevron {
-            display: none;
-          }
-        }
+      }
+      .desktopCategoryLegend {
+        margin-bottom: 1rem;
+        display: none;
       }
       .categoryCheckboxes {
         position: absolute;
@@ -183,6 +194,12 @@
         padding: 0;
         box-shadow: unset;
         top: 0 !important;
+        .mobileCategoryToggle {
+          display: none;
+        }
+        .desktopCategoryLegend {
+          display: block;
+        }
       }
     }
     .filterPanel, .categoryCheckboxes {
