--- a/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
@@ -90,10 +90,10 @@
         top: 100%;
         height: 14rem;
         &.hidden {
-          left: -9999999px;
+          display: none;
           @include desktop() {
             position: relative;
-            left: 0;
+            display: block;
           }
         }
         @include desktop() {
@@ -144,6 +144,10 @@
           }
           @include focus-visible-touch-outlines();
         }
+        legend {
+          padding: 0;
+          margin: 0;
+        }
       }
       .desktopCategoryLegend {
         display: none;
@@ -154,8 +158,8 @@
         flex-direction: column;
         font-weight: 600;
         font-size: 1.25em;
-        padding-left: unset;
-        padding-right: unset;
+        padding: .75rem 0;
+        margin: 0;
         border: unset;
         select {
           margin-top: 0.5rem;
@@ -166,7 +170,6 @@
       }
       & > fieldset {
         &.open {
-          border-bottom: 1px solid whitesmoke;
           @include desktop () {
             height: 25rem;
           }
